tests/baselines/reference/unusedTypeParameters5.errors.txt
unusedTypeParameters5.ts(2,12): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
unusedTypeParameters5.ts(6,16): error TS6133: 'K' is declared but its value is never read.


==== unusedTypeParameters5.ts (2 errors) ====
    class A<Dummy> {
        public x: Dummy;
               ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    var x: {
        new <T, U, K>(a: T): A<U>;
                   ~
!!! error TS6133: 'K' is declared but its value is never read.
    }